--- a/contactme.html
+++ b/contactme.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"
     </head>
     <body>
+         <a href="video121.mp4" class="jalan">
+            <video autoplay loop muted src="video121.mp4" type="video/mp4" class="video32"></video>
+            </a>
         <img src="megu.png" class="megu">
         <script src="duo.js"></script>
         <audio controls autoplay loop >
